--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ new_mime_guess = "4.0.4"
 mime = "0.3.17"
 tokio = { version = "1.47.1", features = ["full"] }
 xdg = "3.0.0"
+hex_color = "3.0.0"
 
 [build-dependencies]
 protobuf-codegen = "3.4"
